# Catalog

./: .gitignore
Client/: Application.h  CMakeLists.txt  CMakePresets.json
Client/Controllers/: CMakeLists.txt  Controller.cpp  Controller.h
Client/Modules/: CMakeLists.txt  CoinDetailsModule.cpp  CoinDetailsModule.h  CoinModule.cpp  CoinModule.h  CollectionModule.cpp  CountriesModule.cpp  Module.h
General/: CMakeLists.txt  CoreCoin.cpp  CoreCoin.h  CoreCollection.h  IController.h
Server/: CMakeLists.txt  Users.csv
Server/Controllers/: CMakeLists.txt  Controller.cpp  Controller.h
Server/Objects/: CMakeLists.txt  Coin.h  Collection.h  User.h
Server/Servers/: CMakeLists.txt
Server/Servers/RPC/: CMakeLists.txt  RPCCoins.h
Server/Storages/: CMakeLists.txt  ICoinStorage.h
Server/Storages/FileStorages/: CMakeLists.txt  CSVCoinStorage.cpp  CSVCoinStorage.h  CSVUserStorage.cpp  CSVUserStorage.h  FileCoinStorage.cpp  FileCoinStorage.h  FileUserStorage.cpp  FileUserStorage.h
Server/UsersData/: LastUserId.txt
